--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
-* {
-  font-family: "Noto Sans JP", sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
 }
 
-html {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(15, 15, 15);
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
