--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,27 @@
 .App {
   text-align: center;
+  width: 100%;
+  max-width: 600px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title {
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
+.scanBtn {
+  padding: 0.75rem 1.5rem;
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fafafa;
+  border: 2px solid #fafafa;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.75, 0.055, 0.675, 0.19);
+}
+
+.scanBtn:hover {
+  background-color: #fafafa;
+  color: #151617;
 }
