--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .App {
-  text-align: center;
-  width: 100%;
-  max-width: 600px;
+  width: 90%;
+  max-width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .title {
   font-size: 2rem;
-  margin-bottom: 3rem;
+  margin: 5rem 0rem;
+  text-align: center;
 }
 
 .scanBtn {
